# LECERF

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/13-time-travel/: 13-01-PLAN.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-04-PLAN.md  13-05-PLAN.md  13-05-SUMMARY.md  13-06-SUMMARY.md  13-PHASE-SUMMARY.md  13-RESEARCH.md
.planning/phases/14-jit-depth/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-04-PLAN.md  14-04-SUMMARY.md  14-05-PLAN.md  14-05-SUMMARY.md  14-06-PLAN.md  14-07-SUMMARY.md  (+2 more)
docker/: test_docker.sh
firmware/: run_all.sh
firmware/test10_stm32_blink/: build.sh  main.c
firmware/test7_freertos/: FreeRTOSConfig.h  build.sh  main.c
include/: lecerf.h
include/core/: board.h  bus.h  codegen.h  decoder.h  gdb.h  jit.h  nvic.h  run.h  tt.h
include/periph/: dwt.h  scb.h  stm32.h  uart.h
python/: MANIFEST.in  pyproject.toml
python/lecerf/: __init__.py  _core.py  pytest_plugin.py
python/tests/: conftest.py  test_smoke.py
src/: lecerf_api.c
src/core/: board.c  bus.c  codegen.c  decoder.c  executor.c  gdb.c  jit.c  nvic.c  run.c  tt.c
src/periph/: dwt.c  scb.c  stm32.c  uart.c
tests/: CMakeLists.txt  test_jit_abi.c  test_jit_bench.c  test_jit_branch.c  test_jit_flags.c  test_jit_ldr_str.c  test_jit_push_pop.c  test_lecerf_api.c  test_memory.c  test_tt_determinism.c  test_tt_eth_replay.c  test_tt_firmware.c  test_tt_replay.c
tools/: main.c  smoke.c
(+7 files in other folders)
